--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
+		<!--
+		https://stackoverflow.com/questions/76467522/cant-compile-spring-boot-on-java-1-8
+		Spring 3.x doesn't allow 1.8
+		-->
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
@@ -47,6 +51,10 @@
 			<artifactId>maven-deploy-plugin</artifactId>
 			<version>3.1.1</version>
 			<type>maven-plugin</type>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
