--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:dcbapp
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
-spring.datasource.password=!1aUniversum1!
+spring.datasource.password=UniversumPass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
