sam build configurations added

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,5 @@
+# -Dspring-boot.run.profiles=local
+
 # H2 Database
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:dcbapp
@@ -5,8 +7,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=UniversumPass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#server.port=8080 (This is the default)
-
-amazon.dynamodb.endpoint=http://localhost:8000/
-amazon.aws.accesskey=key
-amazon.aws.secretkey=key2
+server.port=8081
