Changes for Dynamo DB

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,19 @@
 		</dependency>
 		<!-- Dependencies for AWS -->
 
+		<!-- Dependencies for DynamoDB -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-dynamodb</artifactId>
+			<version>1.11.64</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.derjust</groupId>
+			<artifactId>spring-data-dynamodb</artifactId>
+			<version>5.1.0</version>
+		</dependency>
+		<!-- Dependencies for DynamoDB -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
