Changes for dynamodb

--- a/pom.xml
+++ b/pom.xml
@@ -14,23 +14,20 @@
 	<packaging>jar</packaging>
 	<!-- If war is needed change packaging to war -->
 
-	<!--
-	Packing using maven
-	https://stackoverflow.com/questions/71898746/spring-boot-create-jar-file-maven
-	-->
+	<!-- Packing using maven
+	https://stackoverflow.com/questions/71898746/spring-boot-create-jar-file-maven -->
 
 	<name>Universum</name>
 	<description>Universum Spring Boot project</description>
 	<properties>
-		<!--
-		https://stackoverflow.com/questions/76467522/cant-compile-spring-boot-on-java-1-8
-		Spring 3.x doesn't allow 1.8
-		-->
+		<!-- https://stackoverflow.com/questions/76467522/cant-compile-spring-boot-on-java-1-8
+		Spring 3.x doesn't allow 1.8 -->
 		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
-		<!-- Dependencies for AWS -->
+
+		<!-- Dependencies for AWS Lambda-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-function-web</artifactId>
@@ -39,7 +36,6 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-function-adapter-aws</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>com.amazonaws.serverless</groupId>
 			<artifactId>aws-serverless-java-container-springboot3</artifactId>
@@ -51,7 +47,7 @@
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-dynamodb</artifactId>
-			<version>1.11.64</version>
+			<version>1.11.408</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.derjust</groupId>
@@ -78,11 +74,6 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>DynamoDBLocal</artifactId>
-			<version>2.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -125,33 +116,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<!--
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.5.1</version>
-				<configuration>
-					<createDependencyReducedPom>false</createDependencyReducedPom>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<artifactSet>
-								<excludes>
-									<exclude>org.apache.tomcat.embed:*</exclude>
-								</excludes>
-							</artifactSet>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	-->
 </project>
