--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 			<artifactId>aws-serverless-java-container-springboot3</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-		<!-- Dependencies for AWS -->
+		<!-- Dependencies for AWS Lambda-->
 
 		<!-- Dependencies for DynamoDB -->
 		<dependency>
@@ -60,6 +60,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -95,6 +102,31 @@
 			<version>3.1.1</version>
 			<type>maven-plugin</type>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<!--
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		-->
+		<!--
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		-->
 	</dependencies>
 
 	<dependencyManagement>
